linked section edit template to auditform and field edit template to section

--- a/Resources/views/AuditForm/index.html.twig
+++ b/Resources/views/AuditForm/index.html.twig
@@ -36,15 +36,15 @@
                         <td width=20% style="white-space: nowrap;">
                             <div class="btn-group pull-right">
                                 <a class="btn btn-mini" title="View"
-                                   href="{{ path( 'cisco_auditform_view', { 'id': form.id } ) }}">
+                                   href="{{ path( 'cisco_auditform_view', { 'form_id': form.id } ) }}">
                                     <i class="icon-eye-open"></i>
                                 </a>  
                                 <a class="btn btn-mini" title="Edit"
-                                    href="{{ path( 'cisco_auditform_edit', { 'id': form.id } ) }}">
+                                    href="{{ path( 'cisco_auditform_edit', { 'form_id': form.id } ) }}">
                                     <i class="icon-wrench"></i>
                                 </a>
                                 <a class="btn btn-mini" title="Delete"
-                                   href="{{ path( 'cisco_auditform_delete', { 'id': form.id } ) }}">
+                                   href="{{ path( 'cisco_auditform_delete', { 'form_id': form.id } ) }}">
                                     <i class="icon-trash"></i>
                                 </a>
                             </div>
