--- a/Resources/views/AuditForm/view.html.twig
+++ b/Resources/views/AuditForm/view.html.twig
@@ -8,7 +8,7 @@
         <legend>Audit Form
             <div class="btn-group pull-right">
                 <a class="btn btn-mini" 
-                   href="{{ path( 'cisco_auditform_edit', { 'id': form.id } ) }}" style="font-size: 10px">
+                   href="{{ path( 'cisco_auditform_edit', { 'form_id': form.id } ) }}" style="font-size: 10px">
                     <i class="icon-wrench"></i> Edit
                 </a>
             </div>
