--- a/Resources/views/AuditFormSection/_view.html.twig
+++ b/Resources/views/AuditFormSection/_view.html.twig
@@ -14,11 +14,11 @@
                 <i class="icon-eye-open" title="View"></i>
             </a>
             <a class="btn btn-mini cisco-audit-section-edit" data-section-id="{{ section.id }}"
-                href="{{ path( 'cisco_auditsection_edit', { 'id': section.id } ) }}">
+                href="{{ path( 'cisco_auditsection_edit', { 'section_id': section.id } ) }}">
                 <i class="icon-wrench" title="Edit"></i> 
             </a>
             <a class="btn btn-mini cisco-audit-section-delete" data-section-id="{{ section.id }}"
-                href="{{ path( 'cisco_auditsection_delete', { 'id': section.id } ) }}">
+                href="{{ path( 'cisco_auditsection_delete', { 'section_id': section.id } ) }}">
                 <i class="icon-trash" title="Delete"></i> 
             </a>
         </div>        
