--- a/Resources/views/AuditFormField/_ulist.html.twig
+++ b/Resources/views/AuditFormField/_ulist.html.twig
@@ -1,11 +1,12 @@
 <div class="cisco-audit-orphan-field">
-    <a class="btn btn-mini" href="" title="TO BE IMPLEMENTED">
+    <a class="btn btn-mini" 
+       href="{{ path( 'cisco_auditsection_new_field', { 'section_id' : section.id } ) }}">
         Create: new Field <i class="icon-plus"></i>
     </a>
 {% if ufields is not empty and section.id is not null %}
     {% for field in ufields %}
-    <a class="btn btn-mini cisco-audit-field-add" data-field-id="{{ field.id }}" title="TO BE IMPLEMENTED"
-       href="{{ path( 'cisco_auditsection_add_field', { 'id' : section.id ,'field_id': field.id } ) }}">
+    <a class="btn btn-mini cisco-audit-field-add"
+       href="{{ path( 'cisco_auditsection_add_field', { 'section_id' : section.id ,'field_id': field.id } ) }}">
         Add: {{ field.title }} <i class="icon-plus"></i> 
     </a>
     {% endfor %}
