--- a/Resources/views/AuditFormSection/_ulist.html.twig
+++ b/Resources/views/AuditFormSection/_ulist.html.twig
@@ -1,11 +1,12 @@
 <div class="cisco-audit-orphan-section">
-    <a class="btn btn-mini" href="{{ path( 'cisco_auditsection_add' ) }}">
+    <a class="btn btn-mini" 
+       href="{{ path( 'cisco_auditform_new_section', { 'form_id' : auditform.id } ) }}">
         Create: new section <i class="icon-plus"></i> 
     </a>
 {% if usections is not empty and auditform.id is not null %}
     {% for section in usections %}
-    <a class="btn btn-mini cisco-audit-section-add" title="TO BE IMPLEMENTED"
-       href="{{ path( 'cisco_auditform_add_section', { 'id' : auditform.id ,'section_id': section.id } ) }}">
+    <a class="btn btn-mini cisco-audit-section-add"
+       href="{{ path( 'cisco_auditform_add_section', { 'form_id' : auditform.id ,'section_id': section.id } ) }}">
         Add: {{ section.title }} <i class="icon-plus"></i>
     </a>
     {% endfor %}
