--- a/Resources/views/AuditForm/index.html.twig
+++ b/Resources/views/AuditForm/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'CiscoSystemsAuditBundle::base.html.twig' %}
 
-{% block pagetitle %}
+{% block body %}
     {{ parent() }}: List of existing Forms
 {% endblock %}
 
