--- a/Resources/views/AuditFormField/_load.html.twig
+++ b/Resources/views/AuditFormField/_load.html.twig
@@ -1,6 +1,6 @@
 {% block pagecontent %}
 <tr class="cisco-audit-field-row">
-    <td colspan="2">{{ field.title }}</td>
+    <td colspan="2" style="padding-left: 50px;">{{ field.title }}</td>
     <td>{{ field.weight }}</td>
     <td>
     {% if field.fatal == 1 %}
@@ -26,11 +26,11 @@
     </td>
 </tr>
 <tr class="cisco-audit-desc-row" style="display: none;">
-    <td><i>Description: </i></td>
+    <td style="padding-left: 50px;"><i>Description: </i></td>
     <td colspan="4">{{ field.description }}</td>
 </tr>
 <tr class="cisco-audit-desc-row" style="display: none;">
-    <td><i>Scores: </i></td>
+    <td style="padding-left: 50px;"><i>Scores: </i></td>
     <td colspan="4">
     {% for score, label in field.scores %}
         <div>
